@@ -1,7 +1,8 @@
 trunk (2008-11-06)
 ==================
 
-  - xxx [Ingeniweb]
+- Copied safeEditProperty from CMFPlone.migration_util to avoid a dependency.
+  [hannosch]
 
 
 1.4.0 (2008-11-05)
